@@ -1320,7 +1320,7 @@ $wgCacheEpoch = '20030516000000';
  * to ensure that client-side caches don't keep obsolete copies of global
  * styles.
  */
-$wgStyleVersion = '112';
+$wgStyleVersion = '113';
 
 
 # Server-side caching:
